[package]
name = "sse-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures-util = { version = "0.3" }
http-body = "1"
http-body-util = "0.1"
pin-project-lite = "0.2"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio-util = { version = "0.7", features = ["io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"]  }
anyhow = "*"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
serde = { version  = "1", features = ["derive"]}
axum = { version = "0.8", features = ["tracing"] }
tracing = { version = "0.1" }
[features]
default = []
tracing = ["dep:tracing"]
